musically/kube-manifests/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicalapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: musicalapp
