musically/kube-manifests/DEVOPS-Nginx-ALB-IngressService.yaml
#DEVOPS-Nginx-ALB-IngressService.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-musically-service
  labels:
    app: musically
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /song1/health-status
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    #Before
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: devops.musicallyoncloud.com   
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: musically-service
              servicePort: 8095
